# go-goal-track-2-public

./: .gitignore  Dockerfile  Final_Boss.dockerfile  README.md  TODO.md  catboost_model_class.cbm  data.txt  fast_solution.ipynb  go-goal.pptx  go.mod  go.sum  input.csv  main.py  ostrovok_new (1).ipynb  output.csv  pyproject.toml
.github/workflows/: sanity-check.yml  track-2-sanity-check.yml
artifacts/cbm/: catboost_model_bathroom.cbm  catboost_model_bedrooms.cbm  catboost_model_floor.cbm  catboost_model_quality.cbm
artifacts/label_text/: label_encoder_bathroom.npy  label_encoder_capacity.npy  label_encoder_class.npy  label_encoder_floor.npy  label_encoder_quality.npy
artifacts/labels/: labels_bedrooms.json
artifacts/labels/json/: labels_club.json
artifacts/labels/npy/: label_encoder_balcony.npy  label_encoder_club.npy  label_encoder_view.npy
artifacts/tfidf/: tfidf_data.json
cmd/tagger/: main.go
cmd/tagger/catboost/: catboost_wrapper.c  (+1 more)
data/cbm/: catboost_model_balcony.cbm
data/labels/: labels_view.json
go/: api.Dockerfile  api.README.md  benchmark_dirty.json  cli.Dockerfile  cli.README.md  config.yaml  file.tape  format.tape  go.mod  go.sum  out.csv  stdout.tape
go/bench/: README.md  benchmark.sh  benchmark_dirty.json
inputs/: rates_short.csv
internal/tui/: tui.go
models/: best_parameters_balcony.json  best_parameters_bathroom.json  best_parameters_bedding.json  best_parameters_bedrooms.json  best_parameters_capacity.json  best_parameters_class.json  best_parameters_club.json  best_parameters_floor.json  best_parameters_quality.json  best_parameters_view.json  catboost_model_balcony.cbm  catboost_model_bathroom.cbm  catboost_model_bedding.cbm  catboost_model_bedrooms.cbm  catboost_model_capacity.cbm  catboost_model_class.cbm  catboost_model_club.cbm  catboost_model_floor.cbm  catboost_model_quality.cbm  classification_report_balcony.txt  classification_report_bathroom.txt  classification_report_bedding.txt  classification_report_bedrooms.txt  classification_report_capacity.txt  classification_report_class.txt  classification_report_club.txt  classification_report_floor.txt  classification_report_quality.txt  classification_report_view.txt
pkg/coolcsv/: reader.go
python/: README.md  cli.Dockerfile  config.yaml  file.tape  format.tape  pyproject.toml  server.Dockerfile  stdout.tape  testing.ipynb
python/bench/: README.md  benchmark.sh  benchmark_dirty.json
python/models_better/: original_labels_capacity.json  original_labels_quality.json  tfidf_vectorizer.joblib
python/models_better/cbm/: catboost_model_bedding.cbm  catboost_model_class.cbm  catboost_model_club.cbm
python/models_better/label_text/: label_encoder_bedding.npy  label_encoder_bedrooms.npy
python/models_better/labels/: labels_balcony.json  labels_bathroom.json  labels_bedding.json  labels_class.json
python/models_better/labels_int/: label_encoder_class.npy  label_encoder_view.npy
python/models_better/tfidf/: tfidf_data.json
python/notebooks/: data_analysis.ipynb  model_evaluation.ipynb
python/src/: README.md  config.yaml  main.py  pyproject.toml
python/src/api/: routes.py  schemas.py
python/src/cli/: README.md  main.py
python/src/cli/core/: config.py
python/src/core/: config.py  constants.py
python/src/models/: registry.py
python/src/server/: README.md  main.py
python/src/server/api/: routes.py  schemas.py
python/src/shared/config/: config.py
python/src/shared/models/: registry.py
python/src/tests/: cli_test.py  server_test.py
python/tapes/: format.tape
python/tests/: test.py
(+17 files in other folders)
