[tool.poetry]
name = "shared"
version = "0.1.0"
description = ""
authors = ["Kirill Parkhomenko <kxrxh.contact@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.12"
catboost = "^1.2.7"
scikit-learn = "^1.5.2"
joblib = "^1.4.2"
pydantic-settings = "^2.5.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
