[tool.poetry]
name = "go-goal-tagger"
version = "0.1.0"
description = ""
authors = [""]
readme = "README.md"


[tool.poetry.dependencies]
python = "^3.12"
fastapi = {extras = ["standard"], version = "^0.115.0"}
pydantic-settings = "^2.5.2"
catboost = "^1.2.7"
scikit-learn = "^1.5.2"
joblib = "^1.4.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
